added local volume for code changes, updated tests

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # ...except the following directories
 !metro2/
 !metro2/*
-!metro2/*/*
+!metro2/tests/*
 !requirements/
 !requirements/*
 !front-end/
