--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,56 +1,94 @@
 {
-  "name": "front-end",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "format": "prettier --write \"**/*.{js,jsx,json,md,css,less,cjs}\"",
-    "run-eslint": "eslint . --ext .js,.jsx",
-    "run-stylelint": "stylelint 'src/**/*.{css,less}' --fix",
-    "lint": "npm-run-all run-eslint run-stylelint",
-    "test:e2e": "start-server-and-test dev http://localhost:3000 'yarn cypress open --e2e --browser chrome'",
-    "test:component": "start-server-and-test dev http://localhost:3000 'yarn cypress open --component --browser chrome'",
-    "test:headless-e2e": "start-server-and-test dev http://localhost:3000 'yarn cypress run --e2e'",
-    "test:headless-component": "start-server-and-test dev http://localhost:3000 'yarn cypress run --component'",
-    "test:unit": "vitest run",
-    "test": "npm-run-all test:headless-e2e test:headless-component test:unit"
-  },
-  "dependencies": {
-    "@cfpb/cfpb-design-system": "0.20.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "cypress": "12.4.1",
-    "eslint": "8.32.0",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-cypress": "2.12.1",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.1",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-prefer-function-component": "3.1.0",
-    "husky": "8.0.3",
-    "jsdom": "21.1.0",
-    "less": "4.1.3",
-    "lint-staged": "13.1.0",
-    "npm-run-all": "4.1.5",
-    "postcss-less": "6.0.0",
-    "prettier": "2.8.3",
-    "start-server-and-test": "1.15.3",
-    "stylelint": "14.16.1",
-    "stylelint-config-prettier": "9.0.4",
-    "stylelint-config-recommended-less": "1.0.4",
-    "stylelint-config-standard": "29.0.0",
-    "vite": "^4.0.0",
-    "vitest": "0.28.3"
-  }
+	"name": "front-end",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"build": "vite build",
+		"dev": "vite --open",
+		"preview": "vite preview",
+		"preview:test": "start-server-and-test preview http://localhost:4173",
+		"test": "vitest",
+		"test:ci": "vitest run",
+		"test:e2e": "pnpm preview:test 'cypress open'",
+		"test:e2e:headless": "pnpm preview:test 'cypress run'",
+		"test:e2e:ci": "vite build && pnpm preview:test 'cypress run --record'",
+		"format": "prettier -uw --cache --ignore-path .gitignore .",
+		"run-tsc": "tsc",
+		"run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx .",
+		"run-stylelint": "stylelint --cache --fix --ignore-path .gitignore **/*.less",
+		"lint": "run-p run-tsc run-eslint run-stylelint",
+		"validate": "run-p lint test:ci test:e2e:headless"
+	},
+	"dependencies": {
+		"@cfpb/cfpb-design-system": "0.26.1",
+		"@tanstack/react-query": "4.29.7",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-router-dom": "6.11.2"
+	},
+	"devDependencies": {
+		"@nabla/vite-plugin-eslint": "1.5.0",
+		"@testing-library/cypress": "9.0.0",
+		"@testing-library/dom": "9.3.0",
+		"@testing-library/jest-dom": "5.16.5",
+		"@testing-library/react": "14.0.0",
+		"@testing-library/user-event": "14.4.3",
+		"@types/css-mediaquery": "0.1.1",
+		"@types/react": "18.2.6",
+		"@types/react-dom": "18.2.4",
+		"@types/react-router-dom": "5.3.3",
+		"@types/testing-library__jest-dom": "5.14.5",
+		"@typescript-eslint/eslint-plugin": "5.59.6",
+		"@typescript-eslint/parser": "5.59.6",
+		"@vitejs/plugin-react": "4.0.0",
+		"@vitest/coverage-istanbul": "0.31.1",
+		"autoprefixer": "10.4.14",
+		"css-mediaquery": "0.1.2",
+		"cypress": "12.12.0",
+		"eslint": "8.41.0",
+		"eslint-config-airbnb": "19.0.4",
+		"eslint-config-airbnb-base": "15.0.0",
+		"eslint-config-airbnb-typescript": "17.0.0",
+		"eslint-config-prettier": "8.8.0",
+		"eslint-plugin-cypress": "2.13.3",
+		"eslint-plugin-import": "2.27.5",
+		"eslint-plugin-jsx-a11y": "6.7.1",
+		"eslint-plugin-react": "7.32.2",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"eslint-plugin-react-prefer-function-component": "3.1.0",
+		"eslint-plugin-testing-library": "5.11.0",
+		"eslint-plugin-unicorn": "47.0.0",
+		"jsdom": "22.0.0",
+		"less": "4.1.3",
+		"lint-staged": "13.2.2",
+		"msw": "1.2.1",
+		"npm-run-all": "4.1.5",
+		"postcss-less": "^6.0.0",
+		"prettier": "2.8.8",
+		"start-server-and-test": "2.0.0",
+		"stylelint": "15.6.2",
+		"stylelint-config-prettier": "9.0.5",
+		"stylelint-config-recommended-less": "1.0.4",
+		"stylelint-config-standard": "33.0.0",
+		"typescript": "5.0.4",
+		"vite": "4.3.8",
+		"vite-tsconfig-paths": "4.2.0",
+		"vitest": "0.31.1",
+		"whatwg-fetch": "3.6.2"
+	},
+	"browserslist": {
+		"production": "Edge >= 18, Firefox >= 60, Chrome >= 61, Safari >= 11, Opera >= 48",
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version"
+		]
+	},
+	"lint-staged": {
+		"*": "prettier -uw --cache",
+		"*.css": "stylelint --cache --fix",
+		"*.{ts,tsx}": [
+			"eslint --cache --fix",
+			"vitest related --run --coverage=false"
+		]
+	}
 }
