--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@
 # ...except the following directories
 !django/
 !django/**
-!metro2/
-!metro2/*
-!metro2/tests/*
+!jobs/
+!jobs/parseEvaluate/
+!jobs/parseEvaluate/*
+!jobs/parseEvaluate/tests/*
 !requirements/
 !requirements/*
 !front-end/
