--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 !jobs/
 !jobs/parseEvaluate/
 !jobs/parseEvaluate/*
+!jobs/parseEvaluate/m2_evaluators/*
 !jobs/parseEvaluate/tests/*
 !front-end/
 !front-end/**
