Extract parse_segment_values as a method; add tests
The tests use sample files that contain full, realistic metro2 segments

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 !jobs/parseEvaluate/*
 !jobs/parseEvaluate/m2_evaluators/*
 !jobs/parseEvaluate/tests/*
+!jobs/parseEvaluate/tests/sample_files/*
 !front-end/
 !front-end/**
 !helm/
