Allow customizing where logs are saved

--- a/.env_SAMPLE
+++ b/.env_SAMPLE
@@ -1,2 +1,4 @@
 # Exam specific environment variables
 EXAM_ROOT="temp"
+# Specify where log files should be saved. Defaults to the project root.
+LOGFILE_LOCATION=""
