Rename env var to match common pattern

--- a/.env_SAMPLE
+++ b/.env_SAMPLE
@@ -3,14 +3,14 @@
 # If not set, use files from the local filesystem in the given directory.
 # Note: If this var is populated with ANY value, S3 will be enabled. In order
 # to disable S3, make sure this var is unset.
-# ENABLE_S3=True
+# S3_ENABLED=True
 
-# If ENABLE_S3 is set, the following env vars need to be set:
+# If S3_ENABLED is set, the following env vars need to be set:
 # S3_BUCKET_NAME='bucket-name'
 # AWS_DEFAULT_REGION='us-east-1'
 # S3_EXAM_ROOT="test-small"
 
-# If ENABLE_S3 is not set, the following env vars need to be set:
+# If S3_ENABLED is not set, the following env vars need to be set:
 LOCAL_EXAM_ROOT="temp"
 
 # Specify where log files should be saved. Defaults to the project root.
