--- a/.env_SAMPLE
+++ b/.env_SAMPLE
@@ -14,4 +14,6 @@
 LOCAL_EXAM_ROOT="temp"
 
 # Specify where log files should be saved. Defaults to the project root.
-LOGFILE_LOCATION=""
+LOGFILE_LOCATION=''
+LOGFILE_LOGGING_LEVEL='DEBUG'
+CONSOLE_LOGGING_LEVEL='DEBUG'
