--- a/.env_SAMPLE
+++ b/.env_SAMPLE
@@ -13,7 +13,5 @@
 # If S3_ENABLED is not set, the following env vars need to be set:
 LOCAL_EXAM_ROOT="temp"
 
-# Specify where log files should be saved. Defaults to the project root.
-LOGFILE_LOCATION=''
-LOGFILE_LOGGING_LEVEL='DEBUG'
-CONSOLE_LOGGING_LEVEL='DEBUG'
+# Specify the log level
+LOGGING_LEVEL='DEBUG'
