Add small sample file for testing

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 !jobs/parseEvaluate/m2_evaluators/*
 !jobs/parseEvaluate/tests/*
 !jobs/parseEvaluate/tests/sample_files/*
+!jobs/parseEvaluate/sample/*
+!jobs/parseEvaluate/sample/data/*
 !front-end/
 !front-end/**
 !helm/
