--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,4 +1,6 @@
-django==4.2.1
-ruff
-coverage==7.2.7
-psycopg2==2.9.5
+asgiref==3.7.2
+coverage==7.3.2
+Django==4.2.5
+psycopg2==2.9.9
+ruff==0.1.0
+sqlparse==0.4.4
