--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
       postgres:
         condition: service_healthy
     environment:
-      DJANGO_SETTINGS_MODULE: m2.settings.local
+      DJANGO_SETTINGS_MODULE: django_application.settings.local
     ports:
       - 127.0.0.1:8000:8000
     stdin_open: true
