--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,3 +69,5 @@ services:
     stdin_open: true
     tty: true
     command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    volumes:
+      - ./django:/src/metro2/django
