The Django container doesn't need postgres installed

--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -5,9 +5,8 @@ FROM python:3.11-alpine as base
 RUN apk update --no-cache && \
     apk upgrade --no-cache && \
     apk add libpq && \
-    apk add --virtual .build-deps gcc python3-dev musl-dev postgresql-dev && \
+    apk add --virtual .build-deps gcc python3-dev musl-dev && \
     apk add --no-cache bash && \
-    apk add postgresql15=15.5-r0 &&\
     pip install --upgrade pip 
 
 # Ensure that the environment uses UTF-8 encoding by default
