Live reload front-end source code in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       postgres:
         condition: service_healthy
     command: yarn dev
+    volumes:
+      - ./front-end/src:/src/frontend/src
   django:
     image: django-m2:local
     build:
