--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -55,15 +55,16 @@
 		"@typescript-eslint/prefer-enum-initializers": "off",
 		"@typescript-eslint/prefer-readonly-parameter-types": "off",
 		"@typescript-eslint/prefer-regexp-exec": "off",
-		"@typescript-eslint/no-magic-numbers": [
-			"error",
-			{
-				"ignoreEnums": true,
-				"ignore": [0],
-				"enforceConst": true,
-				"detectObjects": true
-			}
-		],
+		"@typescript-eslint/no-magic-numbers": "off",
+		// [
+		// 	"error",
+		// 	{
+		// 		"ignoreEnums": true,
+		// 		"ignore": [0],
+		// 		"enforceConst": true,
+		// 		"detectObjects": true
+		// 	}
+		// ],
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"@typescript-eslint/init-declarations": "off",
 		"@typescript-eslint/no-confusing-void-expression": [
@@ -145,6 +146,7 @@
 		"react/jsx-no-constructed-context-values": "error",
 		"react/jsx-no-script-url": "error",
 		"react/jsx-no-useless-fragment": "error",
+		"react/jsx-props-no-spreading": "off",
 		"react/require-default-props": "off",
 		"unicorn/filename-case": [
 			"error",
@@ -157,7 +159,8 @@
 		],
 		"unicorn/no-nested-ternary": ["error"],
 		"unicorn/no-null": "off",
-		"unicorn/no-keyword-prefix": "off"
+		"unicorn/no-keyword-prefix": "off",
+		"unicorn/prevent-abbreviations": "off"
 	},
 	"settings": {
 		"react": {
