--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,6 +24,7 @@
 		"@tanstack/react-query": "4.29.7",
 		"@tanstack/react-router": "^1.16.2",
 		"@tanstack/router-devtools": "^1.17.4",
+		"ag-grid-react": "^31.1.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0"
 	},
