--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "front-end",
 	"private": true,
+	"type": "module",
 	"version": "0.0.0",
 	"scripts": {
 		"build": "vite build",
@@ -73,7 +74,7 @@
 		"stylelint-config-recommended-less": "1.0.4",
 		"stylelint-config-standard": "33.0.0",
 		"typescript": "5.0.4",
-		"vite": "4.3.8",
+		"vite": "^5.2.8",
 		"vite-tsconfig-paths": "4.2.0",
 		"vitest": "0.31.1",
 		"whatwg-fetch": "3.6.2"
