Add buildspec and twistlock scanning
unignore buildspec.yaml

fix release name

try to find dockerfile in codebuild

remove tag from docker push

change ecr login

fix ecr push

because i am dumb

fix host name

fix helm dir

fix release

run kubectl

add metro2 namespace

fix image tag

fix docker tag

test-credit

try twistlock

clean up twistlock scan

add build-utils directory

update buildspec and add docs

test RDS Secrets

try sso creds

add comment on metro2_image env var

try sso admin group

fix sso env var

change to capital F

modify sso_enable value

hardcode enable sso

remove sso enable

test devhub

fix SSO enabled env var

fix helm install

clean up docs

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 !front-end/**
 !helm/
 !helm/**
+!build-utils/
+!build-utils/**  
 
 # ...and the following files
 !Dockerfile
@@ -21,6 +23,7 @@
 !helm-install-local.sh
 !build-images.sh
 !.editorconfig
+!buildspec.yaml
 
 # ... but still ignore compiled files
 *.pyc
