--- a/front-end/.stylelintrc.json
+++ b/front-end/.stylelintrc.json
@@ -1,9 +1,5 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-recommended-less",
-    "stylelint-config-prettier"
-  ],
+  "extends": ["stylelint-config-standard", "stylelint-config-recommended-less"],
   "customSyntax": "postcss-less",
   "rules": {
     "at-rule-no-unknown": [
