--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,11 +26,12 @@
     "@tanstack/react-router": "^1.24.0",
     "@tanstack/router-devtools": "^1.17.4",
     "ag-grid-react": "^31.1.1",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@nabla/vite-plugin-eslint": "1.5.0",
+    "@nabla/vite-plugin-eslint": "^2.0.4",
     "@testing-library/cypress": "9.0.0",
     "@testing-library/dom": "9.3.0",
     "@testing-library/jest-dom": "5.16.5",
@@ -43,12 +44,12 @@
     "@types/testing-library__jest-dom": "5.14.5",
     "@typescript-eslint/eslint-plugin": "5.59.6",
     "@typescript-eslint/parser": "5.59.6",
-    "@vitejs/plugin-react": "4.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-istanbul": "0.31.1",
     "autoprefixer": "10.4.14",
     "css-mediaquery": "0.1.2",
     "cypress": "12.12.0",
-    "eslint": "8.41.0",
+    "eslint": "^8.45.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
@@ -69,8 +70,7 @@
     "postcss-less": "^6.0.0",
     "prettier": "2.8.8",
     "start-server-and-test": "2.0.0",
-    "stylelint": "15.6.2",
-    "stylelint-config-prettier": "9.0.5",
+    "stylelint": "15.6.1",
     "stylelint-config-recommended-less": "1.0.4",
     "stylelint-config-standard": "33.0.0",
     "typescript": "5.0.4",
@@ -93,5 +93,6 @@
       "eslint --cache --fix",
       "vitest related --run --coverage=false"
     ]
-  }
+  },
+  "packageManager": "yarn@4.1.1+sha256.f3cc0eda8e5560e529c7147565b30faa43b4e472d90e8634d7134a37c7f59781"
 }
