Add design-system-react. Use expandables in EvaluatorSummary and icons in LocatorBar.

--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -180,14 +180,14 @@
         "project": ["./tsconfig.node.json"]
       },
       "rules": {
-        "@typescript-eslint/no-magic-numbers": ["off"]
+        "@typescript-eslint/no-magic-numbers": "off"
       }
     },
     {
       "files": ["**/__tests__/**/*.ts?(x)"],
       "extends": ["plugin:testing-library/react"],
       "rules": {
-        "@typescript-eslint/no-magic-numbers": ["off"],
+        "@typescript-eslint/no-magic-numbers": "off",
         "testing-library/no-await-sync-events": [
           "error",
           {
