Updating dockerfile to build static assets for production

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "version": "0.0.0",
   "scripts": {
-    "build": "vite build",
+    "build": "vite build --base=/static/",
     "dev": "vite",
     "preview": "vite preview",
     "preview:test": "start-server-and-test preview http://localhost:4173",
