--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -13,7 +13,7 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ESNext",
-    "types": ["vite/client", "vitest/globals"]
+    "types": ["vite/client", "vitest/globals", "@types/wicg-file-system-access"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
