--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -78,6 +78,10 @@
     "@typescript-eslint/prefer-includes": "off",
     "@typescript-eslint/no-restricted-imports": "off",
     "@typescript-eslint/restrict-template-expressions": "off",
+    "@typescript-eslint/require-array-sort-compare": [
+      "error",
+      { "ignoreStringArrays": true }
+    ],
     "import/no-deprecated": "error",
     "import/order": "off",
     "import/no-extraneous-dependencies": [
