Resolve build error in docker-compose
Without this line, I was unable to run `docker-compose build`. It would
error out during the `pip install -r ./requirements.txt` step, because a
build requirement of `cffi` (a sub-dependency of the `requests` library)
was missing.

--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -7,6 +7,7 @@ RUN apk update --no-cache && \
     apk add libpq && \
     apk add --virtual .build-deps gcc python3-dev musl-dev && \
     apk add --no-cache bash && \
+    apk add libffi-dev && \
     pip install --upgrade pip 
 
 # Ensure that the environment uses UTF-8 encoding by default
