--- a/front-end/package.json
+++ b/front-end/package.json
@@ -52,7 +52,7 @@
     "@vitest/coverage-istanbul": "0.31.1",
     "autoprefixer": "10.4.14",
     "css-mediaquery": "0.1.2",
-    "cypress": "12.12.0",
+    "cypress": "^13.13.2",
     "eslint": "^8.45.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
