Add cypress tests for evaluator page.

--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -13,7 +13,12 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ESNext",
-    "types": ["vite/client", "vitest/globals", "@types/wicg-file-system-access"]
+    "types": [
+      "vite/client",
+      "vitest/globals",
+      "@types/wicg-file-system-access",
+      "cypress"
+    ]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
