--- a/front-end/cypress/tsconfig.json
+++ b/front-end/cypress/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["ESNext"],
+    "jsx": "react-jsx",
+    "lib": ["ESNext", "dom"],
     "module": "ESNext",
     "moduleResolution": "Node",
     "noEmit": true,
@@ -10,7 +11,14 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ESNext",
-    "types": ["cypress", "@testing-library/cypress"]
+    "types": ["cypress", "@testing-library/cypress"],
+    "baseUrl": "../src"
   },
   "include": ["."]
 }
+// "compilerOptions": {
+//   "baseUrl": "../src", // Set the base directory for resolving modules
+//   "paths": {
+//     "@/*": ["*"] // Define aliases here
+//   }
+// },
