--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -10,3 +10,4 @@ django-auth-adfs==1.14.0
 gunicorn==22.0.0
 whitenoise==6.6.0
 smart-open[s3]==7.0.5
+urllib3==2.2.3  # not required directly by Metro2; but pinned to avoid CVEs
