--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -7,6 +7,7 @@ ruff==0.1.11
 boto3==1.35.76
 djangorestframework==3.15.2
 django-auth-adfs==1.14.0
+django-filter==24.3
 gunicorn==22.0.0
 whitenoise==6.6.0
 smart-open[s3]==7.0.5
