--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,16 +23,20 @@
   },
   "dependencies": {
     "@cfpb/cfpb-design-system": "0.26.1",
-    "@tanstack/react-query": "^5.55.4",
-    "@tanstack/react-router": "^1.57.9",
+    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-router": "^1.99.9",
     "@tanstack/router-devtools": "^1.17.4",
+    "@tanstack/router-zod-adapter": "^1.81.5",
+    "@tanstack/zod-adapter": "^1.99.9",
     "ag-grid-react": "^31.1.1",
     "cypress-real-events": "^1.13.0",
     "design-system-react": "https://github.com/cfpb/design-system-react.git",
     "exceljs": "^4.4.0",
     "postcss": "^8.4.38",
+    "query-string": "^9.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^2.0.4",
