Add files from CFPB's open source template
See the diff for the files I decided to include. I excluded the
following files from the template:
- GitHub issue template - GH.com has an updated way of setting issue
  templates, so they no longer need to be in the repo
- .gitignore - we already have a .gitignore
- Changelog - we don't plan on using a changelong, since GH repos are
  self-documenting (and we don't have customers relying on the product
  at the moment anyway)
- Install - Installation instructions will be in the README
- README - we already have a readme. Improving it for the public will be
  a separate task
- Open source checklist - we can work through the checklist in a ticket
  instead of in the repo

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 !build-utils/**
 !jenkins/
 !jenkins/**
+!.github
 
 # ...and the following files
 !Dockerfile
@@ -26,6 +27,10 @@
 !build-images.sh
 !.editorconfig
 !buildspec.yml
+!CODE_OF_CONDUCT.md
+!CONTRIBUTING.md
+!LICENSE
+!TERMS.md
 
 # ... but still ignore compiled files
 *.pyc
