--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-alpine as base
+FROM python:3.11-alpine AS base
 
 # upgrade apk and pip, add build dependencies to .build-deps virtual to be
 # deleted later
@@ -28,7 +28,7 @@ WORKDIR ${APP_HOME}
 RUN echo 'export PATH=$HOME/.local/bin:$PATH' >> /etc/profile
 
 COPY . .
-    
+
 RUN pip install -r ./requirements.txt
 
 # Delete build dependencies
