--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -99,7 +99,8 @@
           "src/setupTests.ts",
           "src/testUtils.tsx",
           "src/mocks/**",
-          "**/__tests__/*.{ts,tsx}"
+          "**/__tests__/*.{ts,tsx}",
+          "**/*{.,_}{test,spec}.{ts,tsx}"
         ]
       }
     ],
