Improve documentation and testing of utils files. Add styles to Cypress component tests.

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,9 +10,9 @@
     "preview:test": "start-server-and-test preview http://localhost:4173",
     "test": "vitest",
     "test:ci": "vitest run",
-    "test:e2e": "pnpm preview:test 'cypress open'",
-    "test:e2e:headless": "pnpm preview:test 'cypress run'",
-    "test:e2e:ci": "vite build && pnpm preview:test 'cypress run --record'",
+    "test:e2e": "yarn cypress open",
+    "test:e2e:headless": "yarn cypress run",
+    "test:e2e:ci": "yarn cypress run --record",
     "test:e2e:dev": "yarn cypress open",
     "format": "prettier -uw --cache --ignore-path .gitignore .",
     "run-tsc": "tsc",
@@ -30,10 +30,8 @@
     "@tanstack/zod-adapter": "^1.99.9",
     "ag-grid-community": "^33.3.0",
     "ag-grid-react": "^33.3.0",
-    "cypress-real-events": "^1.13.0",
     "design-system-react": "https://github.com/cfpb/design-system-react.git",
     "exceljs": "^4.4.0",
-    "postcss": "^8.4.38",
     "query-string": "^9.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,7 +40,7 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.14.4",
     "@nabla/vite-plugin-eslint": "^2.0.4",
-    "@testing-library/cypress": "9.0.0",
+    "@testing-library/cypress": "^10.0.3",
     "@testing-library/dom": "9.3.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
@@ -60,6 +58,7 @@
     "autoprefixer": "10.4.14",
     "css-mediaquery": "0.1.2",
     "cypress": "^13.13.2",
+    "cypress-real-events": "^1.13.0",
     "eslint": "^8.45.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
@@ -78,6 +77,7 @@
     "lint-staged": "13.2.2",
     "msw": "1.2.1",
     "npm-run-all": "4.1.5",
+    "postcss": "^8.4.38",
     "postcss-less": "^6.0.0",
     "prettier": "2.8.8",
     "start-server-and-test": "2.0.0",
