Update imports for constants directory

--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -18,8 +18,12 @@
       "vitest/globals",
       "@types/wicg-file-system-access",
       "cypress"
-    ]
+    ],
+    "paths": {
+      "@src/*": ["*"]
+    }
   },
+
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
