--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "test:ci": "vitest run",
     "test:e2e": "yarn cypress open",
     "test:e2e:headless": "yarn cypress run",
+    "test:component:headless": "yarn cypress run --component",
     "test:e2e:ci": "yarn cypress run --record",
     "test:e2e:dev": "yarn cypress open",
     "format": "prettier -uw --cache --ignore-path .gitignore .",
@@ -19,7 +20,7 @@
     "run-eslint": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx .",
     "run-stylelint": "stylelint --cache --fix --ignore-path .gitignore **/*.less",
     "lint": "run-p run-tsc run-eslint run-stylelint",
-    "validate": "run-p lint test:ci test:e2e:headless"
+    "validate": "run-p lint test:ci test:component:headless test:e2e:headless"
   },
   "dependencies": {
     "@cfpb/cfpb-design-system": "0.26.1",
@@ -61,7 +62,7 @@
     "autoprefixer": "10.4.14",
     "babel-loader": "^10.0.0",
     "css-mediaquery": "0.1.2",
-    "cypress": "^14.5.0",
+    "cypress": "^14.5.3",
     "cypress-real-events": "^1.14.0",
     "eslint": "^8.45.0",
     "eslint-config-airbnb": "19.0.4",
@@ -89,7 +90,7 @@
     "stylelint-config-recommended-less": "1.0.4",
     "stylelint-config-standard": "33.0.0",
     "typescript": "5.0.4",
-    "vite": "^7.0.5",
+    "vite": "^6.3.5",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "0.31.1",
