Fix the frontend build
This should fix the frontend build when running `docker compose build` in this repo.

This is the result of running the commands:

```
yarn cache clean
yarn set version stable
yarn
```

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -115,5 +115,5 @@
       "vitest related --run --coverage=false"
     ]
   },
-  "packageManager": "yarn@4.1.1+sha256.f3cc0eda8e5560e529c7147565b30faa43b4e472d90e8634d7134a37c7f59781"
+  "packageManager": "yarn@4.9.2"
 }
