Rename compose settings with an underscore
This should allow the compose settings file to be imported in another Python file without complexity.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       postgres:
         condition: service_healthy
     environment:
-      DJANGO_SETTINGS_MODULE: django_application.settings.docker-compose
+      DJANGO_SETTINGS_MODULE: django_application.settings.docker_compose
     ports:
       - 127.0.0.1:8000:8000
     stdin_open: true
